# mini-tool-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_en.md  ask_llm.py  pyproject.toml
app/: __init__.py  main.py
app/agent/: __init__.py  loop.py  models.py  planners.py  prompts.py
app/api/: __init__.py  dependencies.py  routes.py  schemas.py
app/core/: __init__.py  config.py  errors.py  logging.py  tool_settings.py  trace.py
app/tools/: __init__.py  base.py  calculator.py  file_search.py  registry.py  todo.py  web_summary_mock.py
documents/: 子模块1_LLM_API与对话结构_概念教学.md  子模块2_Structured_Output与Pydantic校验_概念教学.md  子模块3_Tool_Calling与工具层设计_概念教学.md  子模块4_手写最小Agent_Loop_概念教学.md  子模块5_FastAPI服务化_概念教学.md  子模块6_测试Mock与覆盖率_概念教学.md  子模块7_日志配置Docker与README_概念教学.md  模块1_LLM工程基础与最小Agent_详细学习路线.md
exercise/: README_submodule_5_exercise.md  README_submodule_6_exercise.md  README_submodule_7_exercise.md  submodule_1_exercise.py  submodule_2_exercise.py  submodule_3_exercise.py
exercise/submodule_4_exercise/: README.md  __init__.py  actions.py  demo.py  loop.py  mock_llm.py  prompts.py
tests/: test_agent_loop.py  test_agent_planners.py  test_agent_prompts.py  test_api_chat.py  test_config.py  test_exercises.py  test_tools_calculator.py  test_tools_file_search.py  test_tools_registry.py  test_tools_todo.py  test_tools_web_summary_mock.py
tests/fixtures/search_root/: sample.md
