[project]
name = "mini-tool-agent"
version = "0.1.0"
description = "A learning project for building a minimal tool-using AI agent with FastAPI."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "uvicorn>=0.32.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
